--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^11.2.14",
     "@schematics/angular": "^9.1.0",
     "angular-calendar": "^0.28.24",
+    "firebase": "^8.6.3",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
