--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@angular/router": "^11.2.14",
     "@schematics/angular": "^9.1.0",
     "angular-calendar": "^0.28.24",
-    "firebase": "^8.6.3",
+    "firebase": "^8.6.8",
     "moment": "^2.29.1",
-    "rxjs": "~6.6.0",
+    "rxfire": "^4.0.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
